# remyrust

./: .gitignore  DESCRIPTION  NAMESPACE  README.md  remy_fit  remy_multi
R/: extendr-wrappers.R
src/: .gitignore  Makevars.in  Makevars.win.in  entrypoint.c  remyrust-win.def
src/rust/: Cargo.toml  lib.rs
src/rust/src/: error.rs  lib.rs  parse.rs  simulation.rs  utils.rs
