[package]
name = 'remyrust'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'remyrust'

[dependencies]
extendr-api = { version = "*", features = ["serde"] }
rand = "0.9.2"
rand_distr = "0.5.1"
statrs = "0.16"
puruspe = "0.4.1"
serde = "1.0.228"
paste = "1.0"

[profile.release]
lto = true
codegen-units = 1
